--- a/src/R markdown intro.Rmd
+++ b/src/R markdown intro.Rmd
@@ -9,6 +9,15 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r}
+library(ggplot2)
+
+```
+```{r}
+ggplot(mpg) + geom_point(aes(x = displ, y = hwy))
+
+```
+
 ## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
